--- a/index.html
+++ b/index.html
@@ -1,77 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My UNC Chapel Hill Classes</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <h1>Classes I've Taken at UNC Chapel Hill</h1>
-    </header>
+/* General Body Styling */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
 
-    <nav>
-        <ul>
-            <li><a href="#inls572">INLS572</a></li>
-            <li><a href="#inls534">INLS534</a></li>
-            <li><a href="#inls520">INLS520</a></li>
-            <li><a href="#inls509">INLS509</a></li>
-            <li><a href="#inls613">INLS613</a></li>
-            <li><a href="#inls582">INLS582</a></li>
-            <li><a href="#inls523">INLS523</a></li>
-            <li><a href="#inls560">INLS560</a></li>
-            <li><a href="#inls500">INLS500</a></li>
-        </ul>
-    </nav>
+/* Header Styling */
+header {
+    background-color: #69adf1;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
 
-    <section id="inls572">
-        <h2>INLS572 - Web Development</h2>
-        <p>This class focuses on the principles of managing information systems within organizations.</p>
-    </section>
+h1 {
+    font-size: 2.5em;
+}
 
-    <section id="inls534">
-        <h2>INLS534 - Technology in Youth and Libraries</h2>
-        <p>We explore the design and evaluation of user interfaces and the ways in which humans interact with computers.</p>
-    </section>
+/* Navigation Bar Styling */
+nav {
+    background-color: #000000;
+    padding: 10px;
+    text-align: center;
+}
 
-    <section id="inls520">
-        <h2>INLS520 - Information Organization</h2>
-        <p>This class covers the concepts and techniques needed to design, implement, and manage databases.</p>
-    </section>
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
-    <section id="inls509">
-        <h2>INLS509 - Information Retrieval</h2>
-        <p>Focusing on information retrieval systems, this course dives into algorithms used to search for and retrieve data.</p>
-    </section>
+nav ul li {
+    display: inline-block;
+    margin: 0 15px;
+}
 
-    <section id="inls613">
-        <h2>INLS613 - Text Mining</h2>
-        <p>Learn about the principles of data analytics and how it applies to information science.</p>
-    </section>
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2em;
+}
 
-    <section id="inls582">
-        <h2>INLS582 - System Analysis</h2>
-        <p>This class covers the creation, sharing, and utilization of knowledge in organizations.</p>
-    </section>
+/* Hover effect on Navigation Links */
+nav ul li a:hover {
+    text-decoration: underline;
+}
 
-    <section id="inls523">
-        <h2>INLS523 - Databases in Information Science</h2>
-        <p>We examine the use of metadata and data structures for organizing and managing information.</p>
-    </section>
+/* Section Styling */
+section {
+    background-color: white;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
 
-    <section id="inls560">
-        <h2>INLS560 - Programming in Information Science</h2>
-        <p>This course provides knowledge on the development, implementation, and management of information systems.</p>
-    </section>
+/* Section Titles */
+section h2 {
+    color: #2b547d;
+    font-size: 1.8em;
+    margin-bottom: 10px;
+}
 
-    <section id="inls500">
-        <h2>INLS500 - Information and Society</h2>
-        <p>This class discusses the role of information in society, focusing on policy, ethics, and governance issues.</p>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 Casey Couillard. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+/* Footer Styling */
+footer {
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
