--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Image Display</title>
+    </head>
+    <body>
+        <h1>Images</h1>
+        <img src="images/SILS Raccoon IR.webp" alt="A raccoon with glasses teaching TF/IDF">
+    </body>
+    </html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +20,7 @@
 </head>
 <body>
     <header>
-        <h1>My Personal SILS Expereince at UNC!!!</h1>
+        <h1>My Personal SILS Experience at UNC!!!</h1>
     </header>
 
     <nav>
@@ -24,22 +36,31 @@
             <li><a href="#inls500">INLS500</a></li>
         </ul>
     </nav>
+
     <section> 
-        </h2>This website will show the classes I have taken at SILS and what I have learned to look back on and assitance me in my professional careeer when navigating and utilizing information and data science.</h2>
+        <h2>Welcome to My SILS Experience</h2>
+        <p>This website will show the classes I have taken at SILS and what I have learned. It will assist me in my professional career when navigating and utilizing information and data science.</p>
     </section>
+
+    <section id="raccoon">
+        <h2>My Fun SILS Mascot</h2>
+        <img src="images/SILS Raccoon IR.webp" alt="A raccoon with glasses teaching TF/IDF" style="max-width: 100%; height: auto; border-radius: 10px;">
+        <p>This raccoon symbolizes my fun and nerdy journey in learning about Information Science concepts like TF/IDF.</p>
+    </section>
+
     <section id="inls572">
         <h2>INLS572 - Web Development</h2>
-        <p>This class focuses on the html and CSS to create a functiong webpage.</p>
+        <p>This class focuses on the html and CSS to create a functioning webpage.</p>
     </section>
 
     <section id="inls534">
         <h2>INLS534 - Technology in Youth and Libraries</h2>
-        <p>We explore the innovation of youth classrooms and libraries by incorporating AI and other technology advances for a better and define learning experience.</p>
+        <p>We explore the innovation of youth classrooms and libraries by incorporating AI and other technology advances for a better and defined learning experience.</p>
     </section>
 
     <section id="inls520">
         <h2>INLS520 - Information Organization</h2>
-        <p>This class covers the concepts of how to organnize and classify information.</p>
+        <p>This class covers the concepts of how to organize and classify information.</p>
     </section>
 
     <section id="inls509">
@@ -49,12 +70,12 @@
 
     <section id="inls613">
         <h2>INLS613 - Text Mining</h2>
-        <p>This class is the practice of analyzing vast collections of textual materials to capture key concepts, trends and hidden relationships..</p>
+        <p>This class is the practice of analyzing vast collections of textual materials to capture key concepts, trends, and hidden relationships.</p>
     </section>
 
     <section id="inls582">
         <h2>INLS582 - System Analysis</h2>
-        <p>This class covers how to analyze systems and monitors systems and then modify or create changes for convenience and more practical experience.</p>
+        <p>This class covers how to analyze systems and monitor systems and then modify or create changes for convenience and a more practical experience.</p>
     </section>
 
     <section id="inls523">
@@ -64,7 +85,7 @@
 
     <section id="inls560">
         <h2>INLS560 - Programming in Information Science</h2>
-        <p>This course provides knowledge on a foundation of how to use python and visual studio code.</p>
+        <p>This course provides knowledge on a foundation of how to use Python and Visual Studio Code.</p>
     </section>
 
     <section id="inls500">
@@ -77,3 +98,4 @@
     </footer>
 </body>
 </html>
+
