--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <title>Image Display</title>
     </head>
     <body>
-        <h1>Images</h1>
-        <img src="images/SILS Raccoon IR.webp" alt="A raccoon with glasses teaching TF/IDF">
+        <h1></h1>
+        <img src="images/SILS Homescreen Raccoon.png" alt="A raccoon with glasses teaching TF/IDF">
     </body>
     </html>
 <head>
