--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1></h1>
-        <img src="images/SILS Homescreen Raccoon.png" alt="A raccoon with glasses teaching TF/IDF">
+        <img src="images/SILS Homescreen Raccoon.jpg" alt="">
     </body>
     </html>
 <head>
