--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img src="images/SILS Homescreen Raccoon.jpg" alt="">
     </body>
     </html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,28 +20,65 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>My Personal SILS Experience at UNC!!!</h1>
-    </header>
-
-    <nav>
-        <ul>
-            <li><a href="#inls572">INLS572</a></li>
-            <li><a href="#inls534">INLS534</a></li>
-            <li><a href="#inls520">INLS520</a></li>
-            <li><a href="#inls509">INLS509</a></li>
-            <li><a href="#inls613">INLS613</a></li>
-            <li><a href="#inls582">INLS582</a></li>
-            <li><a href="#inls523">INLS523</a></li>
-            <li><a href="#inls560">INLS560</a></li>
-            <li><a href="#inls500">INLS500</a></li>
-        </ul>
-    </nav>
-
-    <section> 
-        <h2>Welcome to My SILS Experience</h2>
-        <p>This website will show the classes I have taken at SILS and what I have learned. It will assist me in my professional career when navigating and utilizing information and data science.</p>
-    </section>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My UNC Chapel Hill Classes</title>
+        <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
+        <!-- Link to Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Press+Start+2P&family=Silkscreen:wght@400;700&family=VT323&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <h1>My Experience while at SILS!!!</h1>
+        </header>
+    
+        <nav>
+            <ul>
+                <li><a href="#inls572">INLS572</a></li>
+                <li><a href="#inls534">INLS534</a></li>
+                <li><a href="#inls520">INLS520</a></li>
+                <li><a href="#inls509">INLS509</a></li>
+                <li><a href="#inls613">INLS613</a></li>
+                <li><a href="#inls582">INLS582</a></li>
+                <li><a href="#inls523">INLS523</a></li>
+                <li><a href="#inls560">INLS560</a></li>
+                <li><a href="#inls500">INLS500</a></li>
+            </ul>
+        </nav>
+    </body>
+    </html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Hyperlink Example</title>
+      </head>
+      <body>
+        <h1></h1>
+        <p>Click the links below to visit The SILS Homepage, the course description of MSIS, or the INLS572 Page for extra assistance and information:</p>
+        <a href="https://sils.unc.edu/" target="_blank">Visit SILS</a>
+        <a href="https://catalog.unc.edu/graduate/schools-departments/information-library-science/#text" target="_blank">Visit MSIS</a>
+        <a href="https://ruby.ils.unc.edu/~jpboone/courses/inls-572/index.html" target="_blank">Visit INLS572</a>
+      </body>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My SILS Experience</title>
+  <link rel="stylesheet" href="styles.css"> <!-- Link to the external CSS file -->
+</head>
+<body>
+  <section class="sils-experience">
+      <h2>Welcome to My SILS Experience</h2>
+      <p>This website will show the classes I have taken at SILS and what I have learned. It will assist me in my professional career when navigating and utilizing information and data science.</p>
+  </section>
+</body>
+</html>
 
     <section id="inls572">
         <h2>INLS572 - Web Development</h2>
@@ -90,6 +128,6 @@
     <footer>
         <p>&copy; 2025 Casey Couillard. All rights reserved.</p>
     </footer>
+
 </body>
 </html>
-
